# OpenPurse

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  inspect_xsds.py  pyproject.toml  test_iban.py  test_regex.py
.agent/: rules.md
.deps/coverage-7.10.7.dist-info/: RECORD
.deps/pygments-2.19.2.dist-info/: RECORD
.deps/pytest-8.4.2.dist-info/: RECORD
example_messages/: Example_pain.002.001.03_ACCP_incl_accept.xml  Example_pain.002.001.03_PART_incl_accept.xml  Example_pain.002.001.03_RJCT_trans.xml  MT101-sample.html  MT103-sample.html  MT900-sample.html  MT910-sample.html  MT940-itemized-sample.html  MT940-sample.html  MT942-sample.html  Pain.002 version 3 Rejected salary transaction (1).xml  camt_054_credit_notoification_example_norway.xml  camt_054_credit_notoification_example_sweden.xml  camt_054_debet_notification_sepa_cross_border.xml  camt_054_debet_notification_swedish_local.xml  camt_054_debit_notification_swedish_local_from_bban.xml  camt_054_sepa_direct_debit_credit_and_debit_not.xml  pain_001_ver3_cross_border_payment_from_sweden_example.xml  pain_001_ver3_example_swedish_salary_payments.xml  pain_001_ver3_swedish_local_OCR_payment_example.xml  pain_001_ver3_swedish_local_structured_CINV_payment_example.xml  pain_002_status_report_sdd_accp_group_level.xml  pain_002_status_report_sdd_part_rjct_trans.xml  pain_002_status_report_sdd_reject_transaction.xml  pain_002_status_report_sdd_total_reject.xml
openpurse/: __init__.py  __main__.py  anonymizer.py  builder.py  cli.py  exporter.py  models.py  parser.py  reconciler.py  streaming.py  translator.py  validator.py  writer.py
openpurse/database/: models.py  repository.py
openpurse/integrations/: __init__.py  fastapi.py  pydantic.py
scripts/: export_schema.py  publish.sh
tests/: test_acmt.py  test_all_schemas.py  test_anonymizer.py  test_bah_parser.py  test_builder.py  test_camt086.py  test_cli.py  test_database.py  test_examples.py  test_exporter.py  test_fxtr.py  test_integrations.py  test_investigations.py  test_mt_parser.py  test_mt_validation.py  test_pacs.py  test_parser.py  test_reconciler.py  test_robustness.py  test_schema_validation.py  test_sese.py  test_setr.py  test_streaming.py  test_translator.py  test_uetr.py  test_validator.py  test_writer.py  test_xsd_validation.py
