[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpurse"
version = "0.1.5"
description = "A lightweight Python package to flatten complex ISO 20022 XML messages into usable data."
readme = "README.md"
authors = [
    { name = "WDibble" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.0.0"
]
keywords = ["swift", "iso20022", "finance", "xml", "banking", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
    "PyYAML"
]

[project.urls]
Homepage = "https://github.com/WDibble/OpenPurse"
Issues = "https://github.com/WDibble/OpenPurse/issues"